force-app/main/default/objects/ISIC_Mapping_Client_Sector__c/ISIC_Mapping_Client_Sector__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This Custom Setting will hold the mapping of ISIC codes with Client Sector and Sub Sector values.</description>
    <label>ISIC Mapping with Client Sector</label>
</CustomObject>