force-app/main/default/objects/ISIC_Mapping_Client_Sector__c/fields/CIF_ISIC_Description__c.field-meta.xml
<CustomField>
    <fullName>CIF_ISIC_Description__c</fullName>
    <description>This field is set when the industry code is passed into the the account object from CIF</description>
    <inlineHelpText>The ISIC Sub-Sector classification as defined with Client On-boarding</inlineHelpText>
    <label>CIF ISIC Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>