force-app/main/default/objects/ISIC_Mapping_Client_Sector__c/fields/Client_Sector__c.field-meta.xml
<CustomField>
    <fullName>Client_Sector__c</fullName>
    <description>This will contain the client sector value for corresponding ISIC Code.</description>
    <inlineHelpText>Client Sector value for corresponding ISIC code.</inlineHelpText>
    <label>Client Sector</label>
    <length>80</length>
    <type>Text</type>
</CustomField>