force-app/main/default/objects/ISIC_Mapping_Client_Sector__c/fields/Client_Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>Client_Sub_Sector__c</fullName>
    <description>This will contain the Client Sub Sector value for corresponding ISIC code.</description>
    <inlineHelpText>Client Sub Sector value for corresponding ISIC code.</inlineHelpText>
    <label>Client Sub-Sector</label>
    <length>80</length>
    <type>Text</type>
</CustomField>